retrieve_ENO_DEV1/objects/Ghost_Planning_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if the ghost version is made active for all other users in the org.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ghost_Planning__c</fullName>
        <label>Ghost Planning</label>
        <referenceTo>Ghost_Planning__c</referenceTo>
        <relationshipLabel>Ghost Planning Version</relationshipLabel>
        <relationshipName>Ghost_Planning_Version</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Ghost Planning Version</label>
    <nameField>
        <label>Ghost Planning Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ghost Planning Version</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>